--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "homepage": "https://github.com/muratdemirci/ekos-ai-code-challenge#readme",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "casual": "^1.6.2",
         "eslint-config-prettier": "^8.4.0",
         "express": "^4.17.3",
         "jsonwebtoken": "^8.5.1",
