--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "lint": "./node_modules/.bin/eslint .",
         "lint:fix": "eslint --fix --ext .js,.jsx .",
+        "seed": "node ./api/db/seeds.js",
         "start": "node server.js",
         "dev": "nodemon server.js"
     },
